# sql-playgrounds

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  env  pyproject.toml  start.sh  superset_config.py
.claude/: 02-phase2-partitioning.sql  settings.local.json
.playwright-mcp/: page-2026-04-07T14-38-14-846Z.yml  page-2026-04-07T14-38-36-646Z.yml  page-2026-04-07T14-39-22-250Z.yml  page-2026-04-07T14-42-47-004Z.yml  page-2026-04-07T14-43-15-692Z.yml  page-2026-04-07T14-51-44-957Z.yml
docker/: Dockerfile.postgres  Dockerfile.superset  init-data.py  init-superset.sh
docs/interviews/: sql-interview-questions.md
docs/plans/: capture-query-screenshots.py  capture-screenshots.py  option2-dataset-admin-permissions-plan.md  performance-optimization-execution.md  performance-optimization-plan.md  recapture-dashboards.py  superset-role-test-results.md  superset-role-testing-report.md
postgres/docker/: Dockerfile.postgres  init-data.py
python-scripts/: load_reference_data.py  load_taxi_data.py  main.py
sql-scripts/init-scripts/: 00-postgis-setup.sql  00-superset-database.sql  01-nyc-taxi-schema.sql
sql-scripts/model-scripts/: 04-data-migration.sql  README.md  sql-playground-development-plan.md
sql-scripts/reports-scripts/: geospatial-taxi-analytics.sql  nyc-taxi-analytics.sql
superset/: superset_config.py
superset-roles/.temp/: README.md
superset-roles/.temp-02/: DEMO-GUIDE.md  README.md  README_PL.md
superset/config/: superset_config.py  (+1 more)
tests/: README.md  conftest.py  requirements-test.txt  test_data_loading.py  test_docker_setup.py
(+21 files in other folders)
